[package]
name = "rust-game-engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch= "develop" }
pub-sub = "*"